feat(admin): add admin email to configuration

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,13 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_WEBHOOK_URL=
+TELEGRAM_LOG_CHANNEL_ID=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CLASSROOM_USER_EMAIL=
+
+ADMIN_PANEL_USER_EMAIL=
