--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,8 @@
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
         ],
         "lint": [
-            "./vendor/bin/pint app config database routes"
+            "./vendor/bin/pint app config database routes",
+            "./vendor/bin/phpstan analyze --memory-limit=2G"
         ]
     },
     "extra": {
