--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "alcohol/iso4217": "^4.2",
         "filament/filament": "^3.2",
         "gemini-api-php/client": "^1.7",
         "irazasyed/telegram-bot-sdk": "^3.15",
