--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "filament/filament": "^3.2",
         "gemini-api-php/client": "^1.7",
         "irazasyed/telegram-bot-sdk": "^3.15",
+        "kba-team/markdown-table": "^1.1",
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.10.1"
