--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
+        "php": "^8.4",
         "alcohol/iso4217": "^4.2",
         "filament/filament": "^3.2",
         "gemini-api-php/client": "^1.7",
@@ -14,7 +14,8 @@
         "kba-team/markdown-table": "^1.1",
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.18",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "vkarchevskyi/sinoptik.ua-parser": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.5",
