--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.4",
+        "ext-pcntl": "*",
         "alcohol/iso4217": "^4.2",
         "ashtokalo/php-translit": "^0.3.0",
         "filament/filament": "^3.2",
