--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
         "ext-pcntl": "*",
         "alcohol/iso4217": "^4.2",
         "ashtokalo/php-translit": "^0.3.0",
-        "filament/filament": "^3.2",
         "gemini-api-php/client": "^1.7",
         "irazasyed/telegram-bot-sdk": "^3.15",
         "kba-team/markdown-table": "^1.1",
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.10.1",
+        "vkarchevskyi/exchange-rates": "dev-main",
         "vkarchevskyi/sinoptik.ua-parser": "^1.0"
     },
     "require-dev": {
@@ -45,8 +45,7 @@
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi",
-            "@php artisan filament:upgrade"
+            "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
